--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,9 @@ version = 0.3
 description = Install Gaming Packages with ease
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/Ahmed-Al-Balochi/LibreGaming.git
-author = Ahmed Al Balochi
-license = GPL-3.0
+url = https://github.com/Jeyso215/LibreGaming-Solus-OS.git
+author = Jeyso215
+license = AGPL-3.0
 license_files =
 	LICENSE
 
